[package]
name = "aoc2020"
version = "0.1.0"
authors = ["honza"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["d01","d02","d03","d04","d05","d06","d07","d08","d09","d10","d11","d12","d13","d14"]

[dependencies]
